<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mertzlos.speedoflight.MoreActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/firstRow"
        android:background="@drawable/lines" />

    <TextView
        android:id="@+id/text"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:gravity="center_horizontal"
        android:text="@string/scale_model_of_distances" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/text"
        android:background="@drawable/lines" />


    <TextView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sun"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/sun"
        android:layout_marginTop="3dp"
        android:background="@drawable/lines" />

    <TableLayout
        android:id="@+id/table_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sun"
        android:layout_marginTop="10dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_gravity="end"
                android:text="@string/venus"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/venus_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_gravity="end"
                android:text="@string/earth_more"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/earth_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_gravity="end"
                android:text="@string/mars"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/mars_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_gravity="end"
                android:text="@string/jupiter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/jupiter_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_gravity="end"
                android:text="@string/solar_edge"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/solar_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_gravity="end"
                android:text="@string/alpha_centauri"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/centauri_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_gravity="end"
                android:text="@string/sirius"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/sirius_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_gravity="end"
                android:text="@string/andromeda"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/andromeda_info"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/table_info"
        android:layout_marginTop="10dp"
        android:background="@drawable/lines" />

    <TextView
        android:id="@+id/sun_diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view5"
        android:layout_marginTop="20dp"
        android:text="@string/sun_diameter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/diameter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view5"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@id/sun_diameter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sun_diameter"
        android:layout_marginTop="10dp" />




</RelativeLayout>
